test/spec_vectors/simd_load_zero/fail/module_1.wat
(module (memory 0) (func (result v128) (v128.load32_zero (f32.const 0))))